@@ -98,5 +98,7 @@ public class ScalarFunctionModule extends AbstractModule {
         ToFloatArrayFunction.register(this);
         ToShortArrayFunction.register(this);
         ToNullFunction.register(this);
+
+        ExtractFunctions.register(this);
     }
 }
